Fix sizing for commit dashboard on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -100,7 +100,7 @@ html {
 
 .gitCommitReport {
   width: 100%;
-  height: 80vh;
+  min-height: 80vh;
 }
 
 .techStackSection {
